cleanup, match engine changes